[package]
name = "blazectl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
